--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
             </div>
             <div class="gallery">
                 <img class="gallery_img" src="IMAGES/Frisbee_iGoal1.JPG" alt="images">
-                <p>Gere we have on of the disc inside the goal</p>
+                <p>Here we have on of the disc inside the goal</p>
             </div>
             <div class="gallery">
 
